<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelloActivity"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/hello"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createAccBtn"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:background="@drawable/button_shape"
        android:elevation="0dp"
        android:text="@string/createaccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/useExistingAccBtn"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_shape"
        android:text="@string/useexistingaccount"
        app:layout_constraintEnd_toEndOf="@+id/createAccBtn"
        app:layout_constraintTop_toBottomOf="@+id/createAccBtn" />

   <!-- <fragment
        android:id="@+id/createAccountFragment"
        android:name="netizen.com.dowhatyougottado.CreateAccountFragment"
        android:layout_width="0dp"
        android:layout_height="343dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /> -->

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</android.support.constraint.ConstraintLayout>